# vadipartiSweetsGeneric

./: .gitignore  global.config.json  manage.py  pyproject.toml  req.txt
booking/: admin.py  decorators.py  filters.py  models.py  urls.py  utils.py  views.py
booking/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_options.py  0004_order_payment_deposited_by_customer.py
booking/static/: manifest.json
booking/templates/: admin_dashboard.html  admin_home.html  base.html  message_page.html
booking/templates/admin/: base.html  input_filter.html
booking/templates/booking/: edit_order.html  new_order.html  orders_print.html  user_base.html  user_bookings.html  user_deposits.html  user_home.html  user_order_delivery_status.html  user_stats.html
custom_auth/: admin.py  forms.py
custom_auth/migrations/: 0001_initial.py
export/: export.py
management/: admin.py  forms.py  models.py  urls.py  views.py
management/migrations/: 0001_initial.py  0002_userdeposits.py  0003_alter_userdeposits_date.py  0004_alter_billbook_options_dailyreadyitem.py  0005_itembase_stop_taking_order.py  0006_alter_dailyreadyitem_options_alter_itembase_options_and_more.py  0007_alter_item_box_size.py  0008_userdeposits_is_deposited_by_dealer_and_more.py  0009_userdeposits_created_at_userdeposits_updated_at.py  0010_dailyreadyitem_comment.py  0011_alter_dailyreadyitem_comment.py
management/templates/management/: config.html  deposit_payment.html
vadipartiSweets/: asgi.py  constants.py  settings.py  urls.py  utils.py  wsgi.py
